samples/_failures_safe/1761042669_bdf0a5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cc3a7bea.c: In function ‘main’:
./samples/SAFE/__tmp_cc3a7bea.c:164:9: error: expected expression at end of input
  164 |         "Print Graph",
      |         ^~~~~~~~~~~~~
./samples/SAFE/__tmp_cc3a7bea.c:164:9: error: expected declaration or statement at end of input
